--- a/redditClone/app/views/users/new.html.erb
+++ b/redditClone/app/views/users/new.html.erb
@@ -1,11 +1,7 @@
 <h1>Create Account</h1>
 
-<form action="<%= users_url %>" method="post"> 
-  <input
-    type="hidden"
-    name="authenticity_token"
-    value="<%= form_authenticity_token %>"
-  >
+<form action="<%= users_url %>" method="post">
+  <%= form_auth %>
   <label>Username
     <input type="text" name="user[username]" value="<%= @user.username %>">
   </label>
@@ -18,11 +14,7 @@
 <br>
 
 <form action="<%= new_session_url %>" method="get">
-  <input 
-    type="hidden" 
-    name="authenticity_token" 
-    value="<%= form_authenticity_token %>"
-  >
+  <%= form_auth %>  
   <label> If you already have an account:</label>
     <button>Login Here</button>
 </form>
